# State-of-Dress

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/: Hooks.cpp  IPluginInterface.h  Main.cpp  PCH.h
src/Animation/: TimeColorInterpolator.h
src/Animation/TimeInterpolator/: TimeFloatInterpolator.cpp
src/Rendering/: Drawer.cpp  RenderManager.cpp  TextureManager.cpp
src/UserInput/: Input.cpp  Input.h
src/Utilities/: Utils.cpp  Utils.h
